IC-Prod/objects/Vendor__c.object
<CustomObject>
    <fields>
        <fullName>CPP_Producer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPP Producer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPP_Supplier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPP Supplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>AF 	AFGHANISTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX 	ÅLAND ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL 	ALBANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ 	ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS 	AMERICAN SAMOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD 	ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO 	ANGOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI 	ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ 	ANTARCTICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG 	ANTIGUA AND BARBUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR 	ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM 	ARMENIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW 	ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU 	AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT 	AUSTRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ 	AZERBAIJAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS 	BAHAMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH 	BAHRAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD 	BANGLADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB 	BARBADOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BY 	BELARUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE 	BELGIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ 	BELIZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ 	BENIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM 	BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT 	BHUTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO 	BOLIVIA, PLURINATIONAL STATE OF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BQ 	BONAIRE, SINT EUSTATIUS AND SABA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA 	BOSNIA AND HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BW 	BOTSWANA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <externalId>true</externalId>
        <label>Import ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Adhesives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture/Fertilizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biofuels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Producers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elastomers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics - Circuit Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics - Semi Conductor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy - Oil Field Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy - Petroleum Refinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food - Flavor Extracts/Syrup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food - Food Preparations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Product - Pulp/Paper Mill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Products - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial - Misc. Mfg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paint &amp; Coatings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmaceutical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plating/Metal Finishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preservatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller/Subdistributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rubber &amp; Plastics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sealants</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OPP_CC_WS_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OPP CC WS Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPP_CC_WS_Current_Service_Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OPP CC WS Current Service Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPP_CC_WS_Univar_Partner_TSDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OPP CC WS Univar Partner TSDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPP_GSE_Competitor_Producer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GS&amp;E Competitor&apos;s Producer Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPP_GSE_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GS&amp;E Competitor Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPP_GSE_Producer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GS&amp;E Producer Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPP_GSE_Supplier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GS&amp;E Supplier Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPP_IC_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OPP IC Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPP_IC_Producer_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OPP IC Producer Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPP_MB_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OPP MB Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Port__c</fullName>
        <label>Port</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this Vendor used on SKU Products that come from the UVX?</inlineHelpText>
        <label>SKU Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_Request_Producer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sample Request Producer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Univar_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Univar Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vendors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Number__c</fullName>
        <description>UVX Vendor Number.  Exists only on vendors that Univar currently purchases from.</description>
        <externalId>true</externalId>
        <label>Vendor Number</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Vendor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Vendor_Number__c</columns>
        <columns>SKU_Vendor__c</columns>
        <columns>OPP_GSE_Competitor_Producer__c</columns>
        <columns>OPP_GSE_Producer__c</columns>
        <columns>OPP_GSE_Supplier__c</columns>
        <columns>OPP_GSE_Competitor__c</columns>
        <columns>CPP_Supplier__c</columns>
        <columns>CPP_Producer__c</columns>
        <columns>OPP_CC_WS_Competitor__c</columns>
        <columns>OPP_CC_WS_Current_Service_Provider__c</columns>
        <columns>OPP_CC_WS_Univar_Partner_TSDF__c</columns>
        <columns>OPP_IC_Competitor__c</columns>
        <columns>OPP_IC_Producer_Partner__c</columns>
        <columns>OPP_MB_Competitor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Vendor_Quick_Edit</fullName>
        <columns>NAME</columns>
        <columns>CPP_Producer__c</columns>
        <columns>CPP_Supplier__c</columns>
        <columns>OPP_CC_WS_Competitor__c</columns>
        <columns>OPP_CC_WS_Current_Service_Provider__c</columns>
        <columns>OPP_IC_Competitor__c</columns>
        <columns>OPP_IC_Producer_Partner__c</columns>
        <columns>OPP_MB_Competitor__c</columns>
        <columns>OPP_CC_WS_Univar_Partner_TSDF__c</columns>
        <columns>Sample_Request_Producer__c</columns>
        <filterScope>Everything</filterScope>
        <label>Vendor Quick Edit</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Vendor_Quick_EditSKU</fullName>
        <columns>NAME</columns>
        <columns>SKU_Vendor__c</columns>
        <columns>Vendor_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>Vendor Quick Edit - SKU Vendors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Waste_Stream</fullName>
        <columns>NAME</columns>
        <columns>OPP_CC_WS_Competitor__c</columns>
        <columns>OPP_CC_WS_Current_Service_Provider__c</columns>
        <columns>OPP_CC_WS_Univar_Partner_TSDF__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPP_CC_WS_Competitor__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPP_CC_WS_Current_Service_Provider__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPP_CC_WS_Univar_Partner_TSDF__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Waste Stream</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Vendor Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>Opportunity_00Ne0000000Qe3wEAC</fullName>
        <active>true</active>
        <field>Opportunity.Mini_Bulk_Competitor_lookup__c</field>
        <filterItems>
            <field>Vendor__c.OPP_MB_Competitor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Opportunity_Mini Bulk Competitor</name>
    </namedFilters>
    <namedFilters>
        <fullName>Opportunity_00Ne0000000Qe6MEAS</fullName>
        <active>true</active>
        <field>Opportunity.IC_Competitor_Lookup__c</field>
        <filterItems>
            <field>Vendor__c.OPP_IC_Competitor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Opportunity_IC Competitor</name>
    </namedFilters>
    <namedFilters>
        <fullName>Opportunity_00Ne0000000Qe7AEAS</fullName>
        <active>true</active>
        <field>Opportunity.IC_Producer_Partner_lookup__c</field>
        <filterItems>
            <field>Vendor__c.OPP_IC_Producer_Partner__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Opportunity_OPP IC Producer Partner</name>
    </namedFilters>
    <namedFilters>
        <fullName>Opportunity_00Ne0000000Qe7KEAS</fullName>
        <active>true</active>
        <field>Opportunity.CC_Opportunity_Producer_Partner_Lookup__c</field>
        <filterItems>
            <field>Vendor__c.OPP_CC_WS_Univar_Partner_TSDF__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Opportunity_CC Opportunity Producer Part</name>
    </namedFilters>
    <namedFilters>
        <fullName>Opportunity_00Ne0000000b9YxEAI</fullName>
        <active>true</active>
        <field>Opportunity.GSE_Producer_Name__c</field>
        <filterItems>
            <field>Vendor__c.OPP_GSE_Producer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>This list of vendors for this field is limited to just GS&amp;E Producer Partner Vendors.</infoMessage>
        <isOptional>false</isOptional>
        <name>Opportunity_GSE Producer Partner</name>
    </namedFilters>
    <namedFilters>
        <fullName>Opportunity_00Ne0000000b9ZMEAY</fullName>
        <active>true</active>
        <field>Opportunity.GSE_Competitor_Name__c</field>
        <filterItems>
            <field>Vendor__c.OPP_GSE_Competitor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>This list is filtered for GS&amp;E Competitors.</infoMessage>
        <isOptional>false</isOptional>
        <name>Opportunity_GSE Competitor Name</name>
    </namedFilters>
    <namedFilters>
        <fullName>Opportunity_00Ne0000000b9ZWEAY</fullName>
        <active>true</active>
        <field>Opportunity.GSE_Competitor_Producer_Name__c</field>
        <filterItems>
            <field>Vendor__c.OPP_GSE_Competitor_Producer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>This list is filtered for GS&amp;E Producers only.</infoMessage>
        <isOptional>true</isOptional>
        <name>Opportunity_GSE Producer Name</name>
    </namedFilters>
    <namedFilters>
        <fullName>Opportunity_00Ne0000000bWciEAE</fullName>
        <active>true</active>
        <field>Opportunity.CC_Competitor_Lookup__c</field>
        <filterItems>
            <field>Vendor__c.OPP_CC_WS_Competitor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Opportunity_CC Competitor</name>
    </namedFilters>
    <namedFilters>
        <fullName>Opportunity_00Ne0000000bWcxEAE</fullName>
        <active>true</active>
        <field>Opportunity.Current_Service_Provider_Lookup__c</field>
        <filterItems>
            <field>Vendor__c.OPP_CC_WS_Current_Service_Provider__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Opportunity_Current Service Provider</name>
    </namedFilters>
    <namedFilters>
        <fullName>Opportunity_00Ne0000000buPSEAY</fullName>
        <active>true</active>
        <field>Opportunity.GSE_Supplier_Name__c</field>
        <filterItems>
            <field>Vendor__c.OPP_GSE_Supplier__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Only GS&amp;E Suppliers are listed here.</infoMessage>
        <isOptional>true</isOptional>
        <name>Opportunity_GS&amp;E Supplier Name</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I3000000002m3EAA_00NM0000000sw97MAA</fullName>
        <active>true</active>
        <field>CPP__c.IC_Producer_Partner__c</field>
        <filterItems>
            <field>Vendor__c.OPP_IC_Producer_Partner__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>CPP_IC Producer Partner</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I3000000002m3EAA_00NM00000010lwLMAQ</fullName>
        <active>true</active>
        <field>CPP__c.IC_Supplier__c</field>
        <filterItems>
            <field>Vendor__c.CPP_Supplier__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>CPP_IC Supplier</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I3000000005bZEAQ_00Ne0000000QihMEAS</fullName>
        <active>true</active>
        <field>ChemCare__c.Competitor_TSDF_Lookup__c</field>
        <filterItems>
            <field>Vendor__c.OPP_CC_WS_Competitor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Waste Stream_Competitor TSDF Lookup</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I3000000005bZEAQ_00Ne0000000QihREAS</fullName>
        <active>true</active>
        <field>ChemCare__c.Service_Provider_Lookup__c</field>
        <filterItems>
            <field>Vendor__c.OPP_CC_WS_Current_Service_Provider__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Waste Stream_Service Provider Lookup</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I3000000005sSEAQ_00NM0000000swBmMAI</fullName>
        <active>true</active>
        <field>SampleRequest__c.IC_Producer_Partner__c</field>
        <filterItems>
            <field>Vendor__c.OPP_IC_Producer_Partner__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Sample Request_IC Producer Partner</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I3000000005sSEAQ_00Ne0000000Qe8SEAS</fullName>
        <active>true</active>
        <field>SampleRequest__c.Producer_lookup__c</field>
        <filterItems>
            <field>Vendor__c.Sample_Request_Producer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Sample Request_Producer</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ia0000000GqhHEAS_00Nf0000000Xxg7EAC</fullName>
        <active>true</active>
        <field>SKU_Level_Product__c.Vendor__c</field>
        <filterItems>
            <field>Vendor__c.SKU_Vendor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>SKU-Level Product_Vendor</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ie00000000KkDEAU_00Ne0000000ZoGMEA0</fullName>
        <active>true</active>
        <field>CPP_Supplier_Info__c.Supplier__c</field>
        <filterItems>
            <field>Vendor__c.CPP_Supplier__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>CPP Supplier Info_Supplier</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ie00000000KkDEAU_00Ne0000000ZoGREA0</fullName>
        <active>true</active>
        <field>CPP_Supplier_Info__c.Producer__c</field>
        <filterItems>
            <field>Vendor__c.CPP_Producer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>CPP Supplier Info_Producer</name>
    </namedFilters>
    <pluralLabel>Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SKU_Vendor_needs_Vendor_Number</fullName>
        <active>true</active>
        <errorConditionFormula>( ISBLANK(Vendor_Number__c ) &amp;&amp;  SKU_Vendor__c )
||
( NOT(ISBLANK(Vendor_Number__c )) &amp;&amp;  NOT(SKU_Vendor__c ))</errorConditionFormula>
        <errorMessage>SKU Vendors require a Vendor Number, and all Vendors with a Vendor Number must be designated as SKU Vendors.</errorMessage>
    </validationRules>
</CustomObject>